--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -14,7 +14,7 @@
   font-size: 12px;
   text-transform: uppercase;
   color: $white;
-  font-weight: 500;
+  font-weight: 600;
   cursor: pointer;
 
   @media screen and (min-width: 640px) {
@@ -27,7 +27,7 @@
 .inline-button {
   color: $blue;
   display: block;
-  font-weight: 500;
+  font-weight: 600;
   background-color: transparent;
   border: none;
   font-size: 12px;
