--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -43,6 +43,7 @@
     flex: calc(50% - 32px);
     img {
       width: 100%;
+      transform: translateY(24px);
     }
   }
 }
