--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -95,7 +95,7 @@
     padding: 28px 72px;
 
     .nav-item {
-      font-size: 16px;
+      font-size: 14px;
     }
 
     .logo {
