--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -10,6 +10,7 @@
 
   @media screen and (min-width: 1025px) {
     font-size: 60px;
+    line-height: 90px;
     margin-bottom: 32px;
   }
 }
